--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,19 @@
             <version>1.49.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <!-- Surefire Plugin Buraya Eklenmeli -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>  <!-- En güncel stabil sürüm -->
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
